@startuml
'https://plantuml.com/class-diagram

'回调思想
'监听器 IListener  注册给  事件源 EventSource
'事件源 EventSource  回调  监听器 IListener


class Event #palegreen
class EventSource #pink
interface IListener #pink
class ListenerImpl


EventSource o--> IListener : <<回调>>监听器:\n 1）向 事件源 '注册' 监听器 \n 3）事件源，将产生的事件 '通知' 回 监听器
Event o--> EventSource : 2）客户端触发 事件源， 产生事件
IListener <|-- ListenerImpl
IListener --> Event : 4）监听器处理感兴趣的事件


@enduml